fix: Fixed base models and column struct tags
