# docs/swagger.json
@@ -35,7 +35,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.CredentialsDTO"
+                                "$ref": "#/definitions/models.IReadCredentials"
                             }
                         }
                     },
@@ -253,29 +253,6 @@
                 }
             }
         },
-        "models.CredentialsDTO": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
         "models.Health": {
             "type": "object",
             "properties": {
@@ -293,6 +270,26 @@
         "models.ICredentialsCreate": {
             "type": "object",
             "properties": {
+                "hash": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.IReadCredentials": {
+            "type": "object",
+            "properties": {
+                "hash": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
                 "password": {
                     "type": "string"
                 },
@@ -304,6 +301,9 @@
         "models.IUpdateCredentials": {
             "type": "object",
             "properties": {
+                "hash": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
