# src/models/base.go
@@ -6,8 +6,8 @@ import (
 )
 
 type CustomORMModel struct {
-	ID        uint           `gorm:"primaryKey" gorm:"-" json:"id"`
-	CreatedAt time.Time      `gorm:"-" json:"createdAt"`
-	UpdatedAt time.Time      `gorm:"-" json:"updatedAt" `
-	DeletedAt gorm.DeletedAt `gorm:"-" json:"deletedAt" `
+	ID        uint           `gorm:"primaryKey" json:"id" column:"id"`
+	CreatedAt time.Time      `json:"createdAt" column:"createdAt"`
+	UpdatedAt time.Time      `json:"updatedAt" column:"updatedAt"`
+	DeletedAt gorm.DeletedAt `json:"deletedAt" column:"deletedAt"`
 }
